hphp/hack/test/typecheck/super_constraint_9.php.like_types.exp
File "super_constraint_9.php", line 7, characters 10-10:
Invalid return type (Typing[4336])
File "super_constraint_9.php", line 7, characters 10-10:
Expected void because this function implicitly returns void
File "super_constraint_9.php", line 7, characters 59-66:
But got dynamic because it is an unenforceable type
